--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -16,6 +18,10 @@ const goal = 3;
 
 const bookTitle = "Sky Lights"
 const bookAuthor = "Lori Webb"
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -25,6 +31,17 @@ const bookAuthor = "Lori Webb"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+            h1 {
+              color: purple;
+              font-size: 4rem;
+            }
+            .skill {
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
+                    }
+          </style>
 	</head>
 	<body>
         <a href="/">Home</a>
@@ -45,7 +62,7 @@ const bookAuthor = "Lori Webb"
             </ul>
             <p>My skills are:</p>
                 <ul>
-                {skills.map((skill) => <li>{skill}</li>)}
+                {skills.map((skill) => <li class="skill">{skill}</li>)}
                 </ul>
 
                 {happy && <p>I am happy to be learning Astro!</p>}
